<resources>
    <string name="app_name_debug">profach debug</string>
    <string name="app_name_release">profach</string>
    <string name="yovayshi">Определение профессиональных предпочтений Йовайши</string>
    <string name="klimov">Тест по профориентации Климова</string>
    <string name="holomstock">Карта интересов Голомштока</string>
    <string name="holland">Тест профессионального личностного типа Голланда</string>
    <string name="yovayshi_details">
        Методика определения профессиональных предпочтений литовского психолога Л. А. Йовайши
        предназначена для определения склонностей личности к различным сферам профессиональной деятельности.
        Опросник позволяет определить предрасположенность человека к деятельности в сфере умственного или физического труда,
        технических интересов, искусства, работы с людьми. Методика ориентирована в первую очередь на школьников, подростков
    </string>
    <string name="klimov_details">
        Методика представляет собой достаточно короткий опросник, состоящий из 20 альтернативных суждений, из которых необходимо выбрать одно.
        По результатам выявляется ориентация человека на 5 типов профессий, по классификации Е.А.Климова:
        \n-человек - природа.
        \n-человек - техника.
        \n-человек - человек.
        \n-человек - знаковая техника, знаковый образ.
        \n-человек - художественный образ
    </string>
    <string name="holomstock_details">
        Методика «Карта интересов» предназначена для изучения интересов и склонностей человека к различным сферам деятельности.
        Методика ориентирована в первую очередь на профориентацию подростков-старшеклассников, но в какой-то мере может быть использована и взрослыми,
        задумывающимися о смене профессии. Карта интересов А.Е. Голомштока исследует следующие виды профессиональной деятельности: юриспруденция, биология,
        иностранные языки, геология, медицина, лёгкая и пищевая промышленность, музыка, физика, химия, история, журналистика, металлообработка, строительство,
        транспорт, военные специальности, техника, электротехника и радиотехника, литература, общественная деятельность, педагогика, сфера обслу-живания,
        математика, экономика, деревообработка, изобразительное ис-кусство, сценическое искусство, авиация и морское дело, география, физкультура и спорт.
    </string>
    <string name="holland_details">
        Методика профессионального самоопределения Дж. Голланда позволяет соотнести склонности, способности, интеллект с различными профессиями для наилучшего выбора профессии.
        Испытуемому будет предложен перечень положений или вопросов, имеющих два варианта ответа, а  испытуемому необходимо выбрать один из двух.
        По результатам обследования выявляется ориентация человека на 6 типов:
        \n-реалистический тип.
        \n-интеллектуальный тип.
        \n-социальный тип.
        \n-конвенциальный тип.
        \n-предприимчивый тип.
        \n-артистичный тип.
    </string>
    <string name="holomstock_result_details">
        Уровни выраженности:
        \nот -12 до -6 - высшая степень отрицания данного интереса
        \nот -5 до -1 - интерес отрицается
        \nот +1 до +4 - интерес выражен слабо
        \nот +5 до +7 - выраженный интерес
        \nот +8 до +12 - ярко выраженный интерес
    </string>
    <string name="holomstock_biology">Биология: %1$.2f</string>
    <string name="holomstock_geography">География: %1$.2f</string>
    <string name="holomstock_geology">Геология: %1$.2f</string>
    <string name="holomstock_medicine">Медицина: %1$.2f</string>
    <string name="holomstock_light">Легкая и пищевая промышленность: %1$.2f</string>
    <string name="holomstock_physics">Физика: %1$.2f</string>
    <string name="holomstock_chemistry">Химия: %1$.2f</string>
    <string name="holomstock_technique">Техника: %1$.2f</string>
    <string name="holomstock_engineering">Электро- и радиотехника: %1$.2f</string>
    <string name="holomstock_metalworking">Металлообработка: %1$.2f</string>
    <string name="holomstock_woodworking">Деревообработка: %1$.2f</string>
    <string name="holomstock_construction">Строительство: %1$.2f</string>
    <string name="holomstock_transport">Транспорт: %1$.2f</string>
    <string name="holomstock_aviation">Авиация, морское дело: %1$.2f</string>
    <string name="holomstock_military">Военные специальности: %1$.2f</string>
    <string name="holomstock_history">История: %1$.2f</string>
    <string name="holomstock_literature">Литература: %1$.2f</string>
    <string name="holomstock_journalism">Журналистика: %1$.2f</string>
    <string name="holomstock_social">Общественная деятельность: %1$.2f</string>
    <string name="holomstock_pedagogy">Педагогика: %1$.2f</string>
    <string name="holomstock_jurisprudence">Юриспруденция: %1$.2f</string>
    <string name="holomstock_service">Сфера обслуживания: %1$.2f</string>
    <string name="holomstock_math">Математика: %1$.2f</string>
    <string name="holomstock_economics">Экономика: %1$.2f</string>
    <string name="holomstock_languages">Иностранные языки: %1$.2f</string>
    <string name="holomstock_art">Изобразительное искусство: %1$.2f</string>
    <string name="holomstock_acting">Сценическое искусство: %1$.2f</string>
    <string name="holomstock_music">Музыка: %1$.2f</string>
    <string name="holomstock_sport">Физкультура и спорт: %1$.2f</string>
    <string name="walkthrough_fragment_label">Процесс прохождения</string>
    <string name="result_fragment_label">Отображение результатов</string>
    <string name="inquirers_fragment_label">Список методик</string>
    <string name="account_fragment_label">Аккаунт</string>
    <string name="history_fragment_label">История</string>
    <string name="students_fragment_label">Ученики</string>
    <string name="upgrade_account_fragment_label">Купить премиум</string>
</resources>